--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-#Graduation Project Documentation/.obsidian/*
+Graduation Project Documentation/.obsidian/*
 warehouse-robots-shelves-simulation/__pycache__/*
 warehouse-robots-shelves-simulation/test.py
