--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,21 @@
 Graduation Project Documentation/.obsidian/*
 warehouse-robots-shelves-simulation/__pycache__/*
 warehouse-robots-shelves-simulation/test.py
+warehouse-robots-shelves-simulation/.env
+
+# ---------client--------------
+# dependencies
+dashboard-web-application/client/node_modules
+dashboard-web-application/client/.pnp
+dashboard-web-application/client/.pnp.js
+
+# testing
+dashboard-web-application/client/coverage
+
+# production
+/build
+
+# ---------server--------------
+# server
+/node_modules
+.env
