connect to the database in the server - fixes #5

--- a/.gitignore
+++ b/.gitignore
@@ -17,5 +17,5 @@ dashboard-web-application/client/coverage
 
 # ---------server--------------
 # server
-/node_modules
-.env
+dashboard-web-application/server/node_modules
+dashboard-web-application/server/.env
