--- a/dashboard-web-application/server/package.json
+++ b/dashboard-web-application/server/package.json
@@ -20,7 +20,7 @@
     "express": "^4.18.2",
     "helmet": "^6.0.0",
     "morgan": "^1.10.0",
-    "mysql": "^2.18.1",
+    "mysql2": "^3.1.2",
     "nodemon": "^2.0.20"
   }
 }
