--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@ Graduation Project Documentation/.obsidian/*
 warehouse-robots-shelves-simulation/__pycache__/*
 warehouse-robots-shelves-simulation/test.py
 warehouse-robots-shelves-simulation/.env
+dashboard-web-application/client/node_modules/*
+dashboard-web-application/server/node_modules/*
+
