--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,2 @@
 Graduation Project Documentation/.obsidian/*
-AMRs-in-Warehouse-Systems\warehouse-robots-shelves-simulation\__pycache__
+database-creation/AMR_Warehouse_In_Other_Servers.sql
