edited gitignore with files for testing purposes

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,2 @@
 Graduation Project Documentation/.obsidian/*
-AMRs-in-Warehouse-Systems\warehouse-robots-shelves-simulation\__pycache__
+database-creation/testing_servers/*
