edited .gitignore to contain .env file -fixes #36

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,2 @@
 Graduation Project Documentation/.obsidian/*
-database-creation/AMR_Warehouse_In_Other_Servers.sql
+database-creation/testing_servers/*
