--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 Graduation Project Documentation/.obsidian/*
 database-servers-comparison/.env
+database-servers-comparison/servers-performance.xlsx
