edited the gitignore with images folder -fixes #36

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 Graduation Project Documentation/.obsidian/*
 database-servers-comparison/.env
 database-servers-comparison/servers-performance.xlsx
+database-servers-comparison/images/*
