update gitignore - fixes #48

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 Graduation Project Documentation/.obsidian/*
+Graduation-Project-Documentation/.obsidian/
 database-servers-comparison/.env
 database-servers-comparison/images/*
+dashboard-web-application/
