edit mysql versionto 8 and comment db in Docker file - fixes #48

--- a/docker-with-databases/mysql-server-db/Dockerfile
+++ b/docker-with-databases/mysql-server-db/Dockerfile
@@ -1,6 +1,6 @@
-FROM mysql:latest
+FROM mysql:8
 
 ARG MYSQL_ROOT_PASSWORD
-ENV MYSQL_ROOT_PASSWORD = $MYSQL_ROOT_PASSWORD
+ENV MYSQL_ROOT_PASSWORD $MYSQL_ROOT_PASSWORD
 
-COPY testing_AMRs.sql /docker-entrypoint-initdb.d/
+# COPY testing_AMRs.sql /docker-entrypoint-initdb.d/
