add a testing files to gitignore -fixes #23

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 Graduation Project Documentation/.obsidian/*
 database-servers-comparison/.env
 database-servers-comparison/images/*
+database-creation/testing-queries.sql
