update gitignore - fixes #53

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ dashboard-web-application/server/node_modules/*
 qr-codes-with-locations/__pycache__/*
 .obsidian/*
 ROS-communication/__pycache__
+ROS-communication/test.py
