add pg package for postgres - fixes #5

--- a/dashboard-web-application/server/package.json
+++ b/dashboard-web-application/server/package.json
@@ -21,6 +21,7 @@
     "helmet": "^6.0.0",
     "morgan": "^1.10.0",
     "mysql2": "^3.1.2",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "pg": "^8.10.0"
   }
 }
