--- a/dashboard-web-application/server/package.json
+++ b/dashboard-web-application/server/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
