--- a/dashboard-web-application/client/package.json
+++ b/dashboard-web-application/client/package.json
@@ -23,7 +23,8 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "serve": "^14.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
