--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ database-servers-comparison/.env
 database-servers-comparison/images/*
 dashboard-web-application/
 docker-with-databases/__pycache__
+docker-with-databases/.env
