--- a/docker-with-databases/Dockerfile
+++ b/docker-with-databases/Dockerfile
@@ -2,9 +2,14 @@
 
 FROM postgres:15.2
 
+ARG POSTGRES_USER
+ENV POSTGRES_USER $POSTGRES_USER
+
 ARG POSTGRES_PASSWORD
 ENV POSTGRES_PASSWORD $POSTGRES_PASSWORD
 
+ARG POSTGRES_DB
+ENV POSTGRES_DB $POSTGRES_DB
 
 EXPOSE 5432
 
