--- a/dashboard-web-application/server/package.json
+++ b/dashboard-web-application/server/package.json
@@ -22,6 +22,7 @@
     "morgan": "^1.10.0",
     "mysql2": "^3.1.2",
     "nodemon": "^2.0.20",
-    "pg": "^8.10.0"
+    "pg": "^8.10.0",
+    "process":"^0.11.10"
   }
 }
