--- a/.circleci/files/webapplications.yml
+++ b/.circleci/files/webapplications.yml
@@ -1,5 +1,5 @@
 Description: >
-  UdaPeople backend stack.
+  AMRs-in-Warehouse-Systems webapplication stack.
 
 Parameters:
   ID:
@@ -10,34 +10,31 @@ Resources:
   InstanceSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
-      GroupName: !Sub UdaPeople-${ID}
-      GroupDescription: Allow port 9100, 22 and port 3030.
+      GroupName: !Sub AMRs-in-Warehouse-Systems-${ID}
+      GroupDescription: Allow port 22 and port 3000.
       SecurityGroupIngress:
         - IpProtocol: tcp
           FromPort: 22
           ToPort: 22
           CidrIp: 0.0.0.0/0
         - IpProtocol: tcp
-          FromPort: 3030
-          ToPort: 3030
+          FromPort: 3000
+          ToPort: 3000
           CidrIp: 0.0.0.0/0
-        - IpProtocol: tcp
-          FromPort: 9100
-          ToPort: 9100
-          CidrIp: 0.0.0.0/0
+      
 
   EC2Instance:
     Type: AWS::EC2::Instance
     Properties:
-      InstanceType: t2.micro
+      InstanceType: t3.micro
       SecurityGroups:
         - Ref: InstanceSecurityGroup
-      KeyName: udacity-west2
+      KeyName: AMRs-in-Warehouse-Systems
       # If this ami id is not available for you, you can find another (https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/finding-an-ami.html)
       # Ubuntu 18 or higher works fine
-      ImageId: ami-0c09c7eb16d3e8e70
+      ImageId: ami-08766f81ab52792ce
       Tags:
         - Key: Name
-          Value: !Sub backend-${ID}
+          Value: !Sub webapplications-${ID}
         - Key: Project
-          Value: Udapeople
+          Value: AMRs-in-Warehouse-Systems
