--- a/.circleci/files/webapplications.yml
+++ b/.circleci/files/webapplications.yml
@@ -27,8 +27,9 @@ Resources:
     Type: AWS::EC2::Instance
     Properties:
       InstanceType: t3.micro
-      SecurityGroups:
-        - Ref: InstanceSecurityGroup
+      SecurityGroupIds:
+        - AMRs-in-Warehouse-Systems-Server-WebServerSecGroup-1XL4A2NV2G304sg-025d04f688b5439b0
+          
       KeyName: AMRs-in-Warehouse-Systems
       # If this ami id is not available for you, you can find another (https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/finding-an-ami.html)
       # Ubuntu 18 or higher works fine
