--- a/.circleci/files/webapplications.yml
+++ b/.circleci/files/webapplications.yml
@@ -6,21 +6,21 @@ Parameters:
     Description: Unique identifier.
     Type: String
 
-Resources:
-  InstanceSecurityGroup:
-    Type: AWS::EC2::SecurityGroup
-    Properties:
-      GroupName: !Sub AMRs-in-Warehouse-Systems-${ID}
-      GroupDescription: Allow port 22 and port 3000.
-      SecurityGroupIngress:
-        - IpProtocol: tcp
-          FromPort: 22
-          ToPort: 22
-          CidrIp: 0.0.0.0/0
-        - IpProtocol: tcp
-          FromPort: 3000
-          ToPort: 3000
-          CidrIp: 0.0.0.0/0
+# Resources:
+#   InstanceSecurityGroup:
+#     Type: AWS::EC2::SecurityGroup
+#     Properties:
+#       GroupName: !Sub AMRs-in-Warehouse-Systems-${ID}
+#       GroupDescription: Allow port 22 and port 3000.
+#       SecurityGroupIngress:
+#         - IpProtocol: tcp
+#           FromPort: 22
+#           ToPort: 22
+#           CidrIp: 0.0.0.0/0
+#         - IpProtocol: tcp
+#           FromPort: 3000
+#           ToPort: 3000
+#           CidrIp: 0.0.0.0/0
       
 
   EC2Instance:
@@ -28,7 +28,7 @@ Resources:
     Properties:
       InstanceType: t3.micro
       SecurityGroupIds:
-        - AMRs-in-Warehouse-Systems-Server-WebServerSecGroup-1XL4A2NV2G304sg-025d04f688b5439b0
+        - sg-080689485792a93d7
           
       KeyName: AMRs-in-Warehouse-Systems
       # If this ami id is not available for you, you can find another (https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/finding-an-ami.html)
