--- a/.circleci/files/webapplications.yml
+++ b/.circleci/files/webapplications.yml
@@ -7,6 +7,15 @@ Parameters:
     Type: String
       
 Resources:
+
+
+  MySubnet:
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: vpc-0c907ea59099c91f7
+      CidrBlock: 10.0.0.0/24
+
+
   EC2Instance:
     Type: AWS::EC2::Instance
     Properties:
@@ -14,7 +23,9 @@ Resources:
           
       SecurityGroupIds:
         - sg-025d04f688b5439b0
-      VpcId: vpc-0c907ea59099c91f7
+
+      # VpcId: vpc-0c907ea59099c91f7
+      SubnetId: !Ref MySubnet
           
       KeyName: AMRs-in-Warehouse-Systems
       # If this ami id is not available for you, you can find another (https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/finding-an-ami.html)
