add  config infrastructure job -fixes #5

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -177,8 +177,8 @@ workflows:
           requires: [build-frontend]
       - create-infrastructure
           requires: [scan-frontend, scan-backend]
-          filters:
-            branches:
-              only: [main]
+          # filters:
+          #   branches:
+          #     only: [main]
       - configure-infrastructure:
           requires: [create-infrastructure]
