--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -175,7 +175,7 @@ workflows:
           requires: [build-backend]
       - scan-frontend:
           requires: [build-frontend]
-      - create-infrastructure
+      - create-infrastructure: 
           requires: [scan-frontend, scan-backend]
           # filters:
           #   branches:
