--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -167,16 +167,4 @@ jobs:
 workflows:
   default:
     jobs:
-      # - build-frontend
-      # - build-backend
-      # - scan-backend:
-      #     requires: [build-backend]
-      # - scan-frontend:
-      #     requires: [build-frontend]
-      - create-infrastructure: 
-          # requires: [scan-frontend, scan-backend]
-          # filters:
-          #   branches:
-          #     only: [main]
-      # - configure-infrastructure:
-      #     requires: [create-infrastructure]
+      - create-infrastructure
