added a .env file to gitignore -fixes #6

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ dashboard-web-application/server/node_modules/*
 qr-codes-with-locations/__pycache__/*
 .obsidian/*
 ecommerce-website/components/.env
+ecommerce-website-version2/components/.env
