run config infrastructure job -fixes #5

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -168,3 +168,5 @@ workflows:
   default:
     jobs:
       - create-infrastructure
+      - configure-infrastructure:
+          requires: [create-infrastructure]
