added the data file to Dockerfile -fixes #48

--- a/docker-with-databases/Dockerfile
+++ b/docker-with-databases/Dockerfile
@@ -13,4 +13,8 @@ ENV POSTGRES_DB $POSTGRES_DB
 
 EXPOSE 5432
 
+RUN mkdir -p /var/system-data
+
+COPY docker-with-database/e-commerce-website-data.sql /var/system-data
+
 COPY docker-with-databases/postgres-database.sql /docker-entrypoint-initdb.d/
