--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -4,22 +4,21 @@
     path: ~/backend-app
     state: directory
 
-- name: "untar backend files"
+- name: "untar build of frontend files"
   unarchive:
     src: artifact.tar.gz
     dest: ~/backend-app
 
 
-- name: "install node dependencies"
+# - name: "install node dependencies"
+#   shell: |
+#     cd ~/backend-app
+#     npm i
+
+- name: "execute node app with npm"
   shell: |
     cd ~/backend-app
-    npm i
-
-- name: "execute node app with pm2"
-  shell: |
-    cd ~/backend-app/dist
-    pm2 stop default
-    pm2 start main.js
+    npm serve
 
   register: execute_node_output
 
