edited the path of the copied data file -fixes #48

--- a/docker-with-databases/Dockerfile
+++ b/docker-with-databases/Dockerfile
@@ -15,6 +15,6 @@ EXPOSE 5432
 
 RUN mkdir -p /var/system-data
 
-COPY docker-with-database/e-commerce-website-data.sql /var/system-data
+COPY docker-with-database/e-commerce-website-data.sql /var/system-data/
 
 COPY docker-with-databases/postgres-database.sql /docker-entrypoint-initdb.d/
