--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,6 +37,16 @@ commands:
             sudo apt-get update
             sudo apt install python3-pip -y
             python3 -m pip install --user ansible
+            
+  install_nodejs:
+    description: Install nodejs 13
+    steps:
+      - run:
+          name: Install nodejs 13
+          command: |
+            curl -fsSL https://deb.nodesource.com/setup_13.x | sudo -E bash -
+            sudo apt install -y nodejs
+
 
 
 
