commented copying the data file -fixes #48

--- a/docker-with-databases/Dockerfile
+++ b/docker-with-databases/Dockerfile
@@ -19,6 +19,6 @@ RUN ls
 
 RUN ls /var
 
-COPY docker-with-database/e-commerce-website-data.sql /var/system-data/
+# COPY docker-with-database/e-commerce-website-data.sql /var/system-data/
 
 COPY docker-with-databases/postgres-database.sql /docker-entrypoint-initdb.d/
