edited the path of the database file -fixes #48

--- a/docker-with-databases/Dockerfile
+++ b/docker-with-databases/Dockerfile
@@ -21,4 +21,4 @@ RUN ls /var
 
 # COPY docker-with-database/e-commerce-website-data.sql /var/system-data/
 
-COPY docker-with-databases/postgres-database.sql /docker-entrypoint-initdb.d/
+COPY postgres-database.sql /docker-entrypoint-initdb.d/
