--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -207,9 +207,10 @@ jobs:
             npm install
             npm run build
             tar -C build -czvf artifact.tar.gz .
-            ls
-            ls .circleci/ansible/roles/deploy/files
-            cp artifact.tar.gz .circleci/ansible/roles/deploy/files
+            
+            cd ..
+            cd ..
+            cp dashboard-web-application/client/artifact.tar.gz .circleci/ansible/roles/deploy/files
             ls .circleci/ansible/roles/deploy/files
             cd .circleci/ansible
             echo "Contents  of the inventory.txt file is -------"
