fix directory structure -fixes #5

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -214,8 +214,8 @@ jobs:
             ls .circleci/ansible/roles/deploy/files
             cd .circleci/ansible
             echo "Contents  of the inventory.txt file is -------"
-            cat inventory.txt
-            ansible-playbook -i inventory.txt deploy-backend.yml
+            cat ~/project/.circleci/ansible/inventory.txt
+            ansible-playbook -i ~/project/.circleci/ansible/inventory.txt ~/project/.circleci/ansible/deploy-backend.yml
 
       # Here's where you will add some code to rollback on failure 
 workflows:
