--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -197,15 +197,17 @@ jobs:
             cd client
             npm install
       - run:
-          name: Get frontend url
+          name: Add webapplications instance ip to ansible inventory
           command: |
-            FRONTEND_PUBLIC_IP=$(aws ec2 describe-instances \
+            WEBAPPLICATIONS_PUBLIC_IP=$(aws ec2 describe-instances \
               --filters "Name=tag:Name,Values=webapplications-${CIRCLE_WORKFLOW_ID:0:7}" \
               --query 'Reservations[*].Instances[*].PublicIpAddress' \
               --output text)
+            echo $WEBAPPLICATIONS_PUBLIC_IP >> .circleci/ansible/inventory.txt
+            cat .circleci/ansible/inventory.txt
 
       - run:
-          name: Deploy frontend objects
+          name: Deploy frontend app
           command: |
             cd dashboard-web-application
             cd client
@@ -220,6 +222,8 @@ jobs:
             cd .circleci/ansible
             echo "Contents  of the inventory.txt file is -------"
             cat ~/project/.circleci/ansible/inventory.txt
+            echo "Contents  of the inventory.txt file is -------"
+            cat inventory.txt
             export ANSIBLE_HOST_KEY_CHECKING=False
             ansible-playbook -i ~/project/.circleci/ansible/inventory.txt ~/project/.circleci/ansible/deploy-backend.yml
 
