--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -11,14 +11,15 @@
 #     state: latest
 #     update_cache: yes
 
-- name: "install nvm"
+- name: "install docker"
   shell: |
-    curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.0/install.sh | bash
+    sudo apt  install docker.io
 
-- name: "install nodejs and npm"
-  shell: |
-    source /home/ubuntu/.bashrc 
-    nvm install node
+
+# - name: "install nodejs and npm"
+#   shell: |
+#     source /home/ubuntu/.bashrc 
+#     nvm install node
 
 
 
