deploy database - fixes #5

--- a/.circleci/ansible/roles/deploy-frontend/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy-frontend/tasks/main.yml
@@ -1,8 +1,8 @@
 ---
-- name: "Create backend app dir"
-  file:
-    path: /home/ubuntu/backend-app
-    state: directory
+# - name: "Create frontend app dir"
+#   file:
+#     path: /home/ubuntu/frontend-app
+#     state: directory
 
 
 
